---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2021-11-13
  Features:
    - Added task status, which can be one of `not started`, `in progress`, `paused` and `blocked`
      - Status can be adjusted in the edit task dialog, or by clicking the status icon in the tasks GUI
    - Added shortcut and hotkey to create a new task
      - Hotkey is not bound by default
  Changes:
    - Descriptions are a lot less disruptive now
  Bugfixes:
    - Fixed edit task GUI width when the parent task has a very long name
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2021-11-11
  Features:
    - Initial release