@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed player tasks being left behind if a player was removed
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2021-11-13
